# ChangeLog for dev-python/ipywidgets
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*ipywidgets-4.0.2 (13 Aug 2015)
*ipywidgets-9999 (13 Aug 2015)

  13 Aug 2015; Marius Brehler <marbre@linux.sungazer.de>
  +ipywidgets-4.0.2.ebuild, +ipywidgets-9999.ebuild, +metadata.xml:
  dev-python/ipywidgets: Initial ebuild