@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Aug 2015; Marius Brehler <marbre@linux.sungazer.de> ipywidgets-9999.ebuild:
+  dev-python/ipywidgets: Fix deps
+
 *ipywidgets-4.0.2 (13 Aug 2015)
 *ipywidgets-9999 (13 Aug 2015)
 
